--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: Volker Seeker
+bio: If a listener nods his head when you're explaining your program, wake him up. Alan Perlis
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: Volker Seeker's personal page
 
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: assets/images/profile.png
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -34,35 +34,28 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
-# google: mygoogle
+#facebook: myfacebook
+twitter: jintronic
+google: VolkerSeeker
 # instagram: myinstagram
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: volker-seeker-20862b8a
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: vsee
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+# medium: medium
 # vimeo: myvimeo
-email: myemail@gmail.com
+email: volker.seeker@gmail.com
 
 authors:
     johndoe:
-        name: John Doe
-        bio: A Man who travels the world eating noodles
+        name: Volker Seeker
+        bio: blurb 
         external-image: false
-        picture: assets/images/profile.jpg
-        twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+        picture: assets/images/profile.png
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
